--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <!-- Header -->
   <div class="container-fluid header">
     <div class="row">
-      <div class="col-lg-2 header-logo">
+      <div class="col-lg-2 header-logo img-fluid">
         <a href="https://pict.edu/"><img src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo" width="85%" height="90%"></a>
       </div>
       <div class="col-lg-8 header-text">
         <p class="header-para text-sm-left">Society for Computer Technology and Research's</p>
         <h1 class="header-h1"><strong>Pune Institute Computer Technology</strong></h1>
       </div>
-      <div class="col-lg-2 header-logo">
+      <div class="col-lg-2 header-logo img-fluid">
         <a href="https://pict.edu/"><img src="./Assets/Images/Logo/Library_Logo.png" alt="PICT Central Library" width="85%" height="90%"></a>
       </div>
     </div>
@@ -38,7 +38,7 @@
   <div class="navbarContainerFluid">
     <nav class="navbar navbar-expand navbar-dark navbarContainer">
       <li class="nav-item navBarItem dropdown">
-        <a class="dropdown-toggle NavTextColor" href="#" data-toggle="dropdown"> Library </a>
+        <a class="dropdown-toggle" href="#" data-toggle="dropdown" style="color:white;"> Library </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item dropdown-toggle" href="#"> Digital Library </a>
             <ul class="submenu dropdown-menu">
@@ -74,12 +74,15 @@
             </ul>
           </li>
           <li><a class="dropdown-item" href="./ServicesAndFacilities.html"> Services And Facilities </a></li>
-          <li><a class="dropdown-item" href="./About.html"> About </a>
-          </li>
+          <li><a class="dropdown-item" href="./About.html"> About </a></li>
         </ul>
       </li>
+      <nav class="nav">
+        <a class="nav-link" href="http://pictlibrary.firstray.in/" style="color:white;">Web-Opac</a>
+      </nav>
     </nav>
   </div>
+  
 
 
   <div class="contaniner-fluid">
@@ -203,13 +206,13 @@
           </div>
         </div>
 
-        <div class="book-transaction text-align-center border-rounded" style="background-color:white;">
+        <div class="container-fluid book-transaction text-align-center border-rounded" style="background-color:white;">
               <img src="./Assets/Images/Background/WhatsApp Image 2021-06-13 at 12.57.01.jpeg" style="float: left;">
               <h1><u><strong>Book Transaction Process</strong></u></h1><br><br>
               <h3><a href="BookTransactionFlowChart.html" style="color: blue; text-decoration: underline; font-weight: bold;"> Click here to view </a></h3>
         </div><br>
 
-        <div class="feedback" style="padding-bottom: 5px;">
+        <div class="container-fluid feedback" style="padding-bottom: 5px;">
           <h1 style="color: black"><u><strong>Feedback</strong></u></h1>
           <!-- <img src="./Assets/Images/Sections/Feedback.png"> -->
           <div class="row">
@@ -252,7 +255,7 @@
         <!-- style="background-image: url('./Assets/Images/SideBars/NewArrival.png'); background-size: 100% 100%;"> -->
           <h2>New Arrivals<br /></h2>
           <ol>
-            <marquee behavior="scroll" direction="up" scrolldelay=100 style="text-align:center;">
+            <marquee behavior="scroll" direction="up" scrolldelay=200 style="text-align:center;">
               <li><span class="blink" style="color:red; font-size:10px;">NEW </span> Microwave Engineering-Rao R. S.</li>
               <li><span class="blink" style="color:red; font-size:10px;">NEW </span> VLSI CAD-Chiplunkar N. N. </li>
               <li><span class="blink" style="color:red; font-size:10px;">NEW </span> Satellite Communication-Mitra Monojit</li>
