--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
   <div class="navbarContainerFluid">
     <nav class="navbar navbar-expand navbar-dark navbarContainer">
       <li class="nav-item navBarItem dropdown">
-        <a class="nav-link dropdown-toggle NavTextColor" href="#" data-toggle="dropdown"> Library </a>
+        <a class="dropdown-toggle" href="#" data-toggle="dropdown" style="color:white;"> Library </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="./index.html"> Central Library </a>
           <li><a class="dropdown-item dropdown-toggle" href="#"> Digital Library </a>
@@ -79,6 +79,9 @@
           </li>
         </ul>
       </li>
+      <nav class="nav">
+        <a class="nav-link" href="http://pictlibrary.firstray.in/" style="color:white;">Web-Opac</a>
+      </nav>
     </nav>
   </div>
 
